<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reasons">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Global warming"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/glob"
                android:textColor="#0F0D0D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"


                android:src="@drawable/globalwarm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Forest fire"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/forestfire"
                android:textColor="#0F0D0D"
                android:textSize="20sp"

                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"

                android:src="@drawable/forestfire" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Melting of the North Pole"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/melting"
                android:textColor="#0F0D0D"
                android:textSize="20sp"

                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Global drought"
                android:textColor="@color/black"
                android:textSize="34sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/globd"
                android:textColor="#0F0D0D"
                android:textSize="20sp"

                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/drought" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Natural disasters"
                android:textColor="@color/black"
                android:textSize="34sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/naturald"

                android:textColor="#0F0D0D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/catsstrophi" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>